tests/snapshots/parser__invalid_foo_brace_should_not_parse.snap
---
source: bril-frontend/tests/parser.rs
expression: parser.diagnostics()
---
[
    Diagnostic {
        message: "Unexpected token",
        span: 123..126,
        labels: [
            (
                "Top-level Bril constructs are imports or functions",
                None,
            ),
        ],
    },
    Diagnostic {
        message: "Failed to find another valid import or function to recover from",
        span: 123..126,
        labels: [
            (
                "Recovery started here",
                None,
            ),
        ],
    },
]
